Fix property grid text selection (#849)
* Initial push.

* Use classnames helper.

* Enable default context menu.

* Do not overlap overlap property grid columns w/ element separator.

* rush change

* NextVersion

* Typo

* Fix tests.

---------

--- a/ui/components-react/src/components-react/propertygrid/component/VirtualizedPropertyGrid.scss
+++ b/ui/components-react/src/components-react/propertygrid/component/VirtualizedPropertyGrid.scss
@@ -11,10 +11,6 @@
   justify-content: center;
 }
 
-.components-virtualized-property-grid {
-  user-select: none;
-}
-
 .components-property-grid-wrapper {
   @include uicore-touch-scrolling;
   @include uicore-scrollbar();
